[package]
name = "node-wick"
version = "3.0.3"
authors = ["Waddlesworth <github@genj.io>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_wick"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.4"

[dependencies]
neon = "0.4"
neon-serde = { git = "https://github.com/GabrielCastro/neon-serde" }
john-wick-parse = { git = "https://github.com/SirWaddles/JohnWickParse" }
