[package]
name = "node-wick"
version = "5.1.0"
edition = "2018"
authors = ["Waddlesworth <github@genj.io>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_wick"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.8"

[dependencies]
neon = "0.8"
neon-serde = { path = "E:\\GitHub\\neon-serde" }
john-wick-parse = { git = "https://github.com/SirWaddles/JohnWickParse" }
